// Copyright 2023 Ant Group Co., Ltd.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//   http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package kuscia.proto.api.v1alpha1.confmanager;

import "kuscia/proto/api/v1alpha1/common.proto";

option go_package = "github.com/secretflow/kuscia/proto/api/v1alpha1/confmanager";
option java_package = "org.secretflow.v1alpha1.confmanager";

service ConfigService {
  rpc CreateConfig(CreateConfigRequest) returns (CreateConfigResponse);

  rpc QueryConfig(QueryConfigRequest) returns (QueryConfigResponse);

  rpc UpdateConfig(UpdateConfigRequest) returns (UpdateConfigResponse);

  rpc DeleteConfig(DeleteConfigRequest) returns (DeleteConfigResponse);

  rpc BatchQueryConfig(BatchQueryConfigRequest) returns (BatchQueryConfigResponse);
}

message CreateConfigRequest {
  RequestHeader header = 1;
  repeated ConfigData data = 2;
}

message CreateConfigResponse {
  Status status = 1;
}

message QueryConfigRequest {
  RequestHeader header = 1;
  string key = 2;
}

message QueryConfigResponse {
  Status status = 1;
  string key = 2;
  string value = 3;
}

message UpdateConfigRequest {
  RequestHeader header = 1;
  repeated ConfigData data = 2;
}

message UpdateConfigResponse {
  Status status = 1;
}

message DeleteConfigRequest {
  RequestHeader header = 1;
  repeated string keys = 2;
}

message DeleteConfigResponse {
  Status status = 1;
}

message BatchQueryConfigRequest {
  RequestHeader header = 1;
  repeated string keys = 2;
}

message BatchQueryConfigResponse {
  Status status = 1;
  repeated ConfigData data = 2;
}

message ConfigData {
  string key = 1;
  string value = 2;
}